Registarar Usuario V.1.1 (Incompleto)

--- a/client/src/pages/auth/register/UserRegister.css
+++ b/client/src/pages/auth/register/UserRegister.css
@@ -1,9 +1,8 @@
-.user-register {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background: #f9f5f6;
-  }
-  
+.register-page {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: #f9f5f6;
+}
