--- a/client/src/pages/data/semesterReport/SemesterReport.css
+++ b/client/src/pages/data/semesterReport/SemesterReport.css
@@ -9,3 +9,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.content__charts-box {
+  display: grid;
+  margin: 20px 20px;
+  flex: 100;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: minmax(280px, 180px);
+  z-index: 1;
+}
