Modifica los estilos del componente - Agrega los dropdown de cada filtro

--- a/client/src/components/toolbar/Toolbar.css
+++ b/client/src/components/toolbar/Toolbar.css
@@ -1,15 +1,18 @@
-.toolbar{
-    display: flex;
-    flex-direction: row;
-    height: 60px;
-    border-bottom: 1px solid #e1e1e1;
-    justify-content: space-around;
+.toolbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 45px;
+  background: #ffffff;
+  border-bottom: 1px solid #e1e1e1;
 }
 
-.toolbar__information-drop{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
+.toolbar__dropdown {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  gap: 10px;
 }
