Agrega transiciones al hover del los items del menu

--- a/client/src/components/sidemenu/SideMenu.css
+++ b/client/src/components/sidemenu/SideMenu.css
@@ -59,6 +59,8 @@
 
 .side-menu__btn:not(.side-menu__btn-active):hover {
   background: #cfd2cf;
+  font-weight: bold;
+  transition: all 0.2s;
 }
 .side-menu__btn-active {
   background-color: #ff0303;
