--- a/client/src/components/chartbox/ChartBox.css
+++ b/client/src/components/chartbox/ChartBox.css
@@ -1,15 +1,5 @@
-.chart-box{
-    padding: 20px;
-    border-radius: 10px;
-    border: 1px solid #333;
-}
-
-.barChartBox{
-    width: 100%;
-    height: 100%;
-}
-
-.barChartBox h1 {
-    font-size: 20px;
-    margin-bottom: 20px;
+.chart-box {
+  padding: 20px;
+  border-radius: 10px;
+  background: #ffffff;
 }
