--- a/client/src/pages/data/semesterReport/SemesterReport.css
+++ b/client/src/pages/data/semesterReport/SemesterReport.css
@@ -1,7 +1,7 @@
 .semester-report {
   display: flex;
   flex-direction: row;
-  background: #eff0f6;
+  background: #EFF0F6;
 }
 
 .semester-report__content {
@@ -12,10 +12,10 @@
 
 .content__charts-box {
   display: grid;
-  margin: 20px 20px;
-  flex: 100;
-  gap: 20px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: minmax(280px, 180px);
+  grid-auto-rows: minmax(230px, 140px);
+  flex: 100;
+  margin: 20px 20px;
+  gap: 20px;
   z-index: 1;
 }
