Agrega titulo dinamico, Modifica la sintaxis, Agrega comentarios de referencia, Modifica randomizador del color

--- a/client/src/pages/data/semesterReport/SemesterReport.css
+++ b/client/src/pages/data/semesterReport/SemesterReport.css
@@ -1,7 +1,7 @@
 .semester-report {
   display: flex;
   flex-direction: row;
-  background: #EFF0F6;
+  background: #eff0f6;
 }
 
 .semester-report__content {
