--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,5 +1,15 @@
 * {
+  min-height: 0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+p {
+  text-wrap: pretty;
 }
