--- a/client/src/pages/data/home/Home.css
+++ b/client/src/pages/data/home/Home.css
@@ -4,17 +4,8 @@
   background: #eff0f6;
 }
 
-.home__columns{
+.home__content {
   flex: 78%;
   display: flex;
   flex-direction: column;
-}
-
-.columns__container-charts{
-  display: grid;
-  margin: 20px 20px;
-  flex: 100;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: minmax(180px,auto);
 }
