--- a/client/src/components/dropdown/Dropdown.css
+++ b/client/src/components/dropdown/Dropdown.css
@@ -12,7 +12,7 @@
   cursor: pointer;
   background: transparent;
   border-radius: 10px;
-  border: 1px solid #333;
+  border: 1px solid #e1e1e1;
 }
 
 .dropdown__content {
@@ -40,4 +40,3 @@
   font-weight: bold;
   transition: all 0.5s;
 }
-
