--- a/client/src/pages/auth/login/Login.css
+++ b/client/src/pages/auth/login/Login.css
@@ -1,8 +1,10 @@
+@import "../../../styles/App.css";
+
 .login-page {
   display: flex;
   width: 100vw;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: #f9f5f6;
+  background-color: var(--color-background-light);
 }
