--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,8 @@
+:root {
+  --color-background-light: #eff0f6;
+  --color-background-dark: #0C2D57;
+}
+
 * {
   min-height: 0;
   margin: 0;
@@ -6,7 +11,12 @@
   font: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   text-wrap: balance;
 }
 
