--- a/client/src/components/sidemenu/SideMenu.css
+++ b/client/src/components/sidemenu/SideMenu.css
@@ -1,41 +1,26 @@
-.side-menu {
-  display: flex;
-  flex-direction: column;
-  flex: 5%;
-  position: relative;
+/* Contenedor principal del menu de navegacion */
+.sidemenu {
   height: 100vh;
-  gap: 5px;
+  position: fixed;
   background: #f9f9f9;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
 }
 
-.side-menu__header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
+/* Cabecera del menu de navegacion */
+.sidemenu__header {
   height: 75px;
-  padding: 0 1.25rem 0 0;
   background: #ffffff;
   border-bottom: 1px solid #e1e1e1;
 }
 
-.header__btn-menu {
-  width: 64px;
-  height: 50px;
-  padding: 10px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  color: #1a120b;
-}
-
+/* Titulo del menu */
 .header__title-menu {
   font-size: 22px;
   font-weight: bold;
   color: #1a120b;
 }
 
+/* Items del menu lateral */
 .side-menu__btn {
   position: relative;
   display: flex;
@@ -43,13 +28,13 @@
   align-items: center;
   height: 50px;
   width: 100%;
-  padding: 0 25px;
+  padding: 30px 25px;
   gap: 16px;
   cursor: pointer;
   text-align: left;
   font-family: inherit;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 1;
   color: #272829;
   background: transparent;
@@ -57,19 +42,16 @@
   border-radius: 10px;
 }
 
-.side-menu__btn:not(.side-menu__btn-active):hover {
-  background: #cfd2cf;
+/* Hover a los items del menu*/
+.side-menu__btn:hover {
+  background: #ff0303;
   font-weight: bold;
   font-size: 17px;
   transition: all 0.6s;
-}
-
-.side-menu__btn-active {
-  background-color: #ff0303;
   color: #fff;
-  font-weight: bold;
 }
 
+/* Iconos del menu */
 .btn__icon-items {
   font-size: 24px;
 }
