--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -1,16 +1,5 @@
 .header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   height: 75px;
-  background: #ffffff;
-  border-bottom: 1px solid #e1e1e1;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
-}
-
-.header__title-header {
-  padding: 0 40px;
 }
 
 .header__title-header h2 {
@@ -19,11 +8,17 @@
 }
 
 .header__user-container {
-  display: flex;
   position: relative;
   align-items: center;
-  padding: 0 40px;
+  padding: 0 20px;
   gap: 10px;
+  cursor: pointer;
+}
+
+.header__user-container:hover {
+  background: #AFAFAF;
+  border-radius: 12px;
+  padding: 10px 20px;
 }
 
 .header__user-container img {
@@ -35,5 +30,10 @@
 
 .header__user-container p {
   font-size: 16px;
-  font-weight: normal;
+  font-weight: bold;
+}
+
+.text-red {
+  color: #ff0303;
+  font-weight: bold;
 }
