--- a/client/src/modules/auth/components/forms/register/UserRegisterForm.css
+++ b/client/src/modules/auth/components/forms/register/UserRegisterForm.css
@@ -20,7 +20,7 @@
   position: absolute;
   width: 180px;
   height: 140%;
-  background-color: #ff004d;
+  background-color: #ff0303;
   box-shadow: 0 0 60px #7d0a0a;
   animation: animate 4s linear infinite;
   z-index: -2;
@@ -39,6 +39,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -85,7 +86,7 @@
 .form__btn-register {
   width: 100%;
   height: 45px;
-  background: #ff004d;
+  background-color: #ff0303;
   border: none;
   outline: none;
   border-radius: 15px;
@@ -108,6 +109,7 @@
   height: 100%;
   width: 100%;
 }
+
 .form__google p {
   font-size: 14.5px;
   text-align: center;
