--- a/client/src/components/chart-box/ChartBox.css
+++ b/client/src/components/chart-box/ChartBox.css
@@ -1,6 +1,6 @@
 /* Conetenedor de las graficas */
 .chart-box {
-  height: 530px;
+  height: 550px;
   width: 450px;
   border-radius: 10px;
   background: #ffffff;
@@ -10,4 +10,25 @@
 /* Hover al contenedor */
 .chart-box:hover {
   cursor: pointer;
+}
+
+.btn-expand {
+  width: 25%;
+  height: 45px;
+  background: #ff0303;
+  border: none;
+  outline: none;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+  cursor: pointer;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  margin-right: 20px;
+}
+
+.btn-expand:hover {
+  background: #d21312;
 }
